# stellar-forge

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf  rust-toolchain.toml  stellar.toml
.github/workflows/: ci.yml
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs  test.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs
deploy/: demo-video.webm  demo.html  index.html  test-output.html
deploy/assets/: index-DH8fC_CO.js  index-DUJHqcbX.css
docs/: architecture.md  demo.md
docs/screenshots/: README.txt  test-output.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: GovernancePanel.tsx  VaultCard.tsx  WalletButton.tsx
frontend/src/hooks/: useContract.ts  useWallet.ts
